Use lime palette in number category
Again, too many changes.

--- a/_posts/es/2015-02-03-pi.md
+++ b/_posts/es/2015-02-03-pi.md
@@ -2,6 +2,11 @@
 title: Pi
 label: post-pi
 categories: [es, numero]
+color:
+  main:
+    content: lime
+  drawer:
+    background: lime
 ---
 
 Pi
